--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Navigation -->
   <header class="fixed top-0 w-full bg-black bg-opacity-70 backdrop-blur-sm z-50">
   <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5 flex-wrap">
-    <h1 class="text-2xl font-bold tracking-tight text-white">MSJBuilders</h1>
+    <h1 class="text-2xl font-bold tracking-tight text-white">MCJBuilders</h1>
     <!-- Mobile Menu Toggle Button -->
   <div class="block md:hidden">
   <button id="nav-toggle" class="text-white focus:outline-none">
@@ -173,18 +173,6 @@
         <h3 class="text-xl font-semibold">Knowles and Son</h3>
         <p class="text-gray-400 mt-2">Projects with colleges and universities.</p>
       </div>
-      <div class="bg-gray-800 p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold">Bellway</h3>
-        <p class="text-gray-400 mt-2">Modern residential new build developments.</p>
-      </div>
-      <div class="bg-gray-800 p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold">Redrow</h3>
-        <p class="text-gray-400 mt-2">Large-scale contemporary housing sites.</p>
-      </div>
-      <div class="bg-gray-800 p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold">Cala Homes</h3>
-        <p class="text-gray-400 mt-2">Premium-quality new build homes.</p>
-      </div>
     </div>
   </div>
 </section>
@@ -199,20 +187,42 @@
 
       <div class="space-y-2">
         <p><span class="font-semibold text-white">📞 Phone:</span> <a href="tel:+447912345678" class="text-gray-300 hover:text-white">+44 7802 436617</a></p>
-        <p><span class="font-semibold text-white">📧 Email:</span> <a href="mailto:info@msjbuilders.co.uk" class="text-gray-300 hover:text-white">info@msjbuilders.co.uk</a></p>
+        <p><span class="font-semibold text-white">📧 Email:</span> <a href="mailto:Mcjbuild@gmail.com" class="text-gray-300 hover:text-white">Mcjbuild@gmail.com</a></p>
       </div>
     </div>
 
     <!-- Right Form -->
-    <form class="space-y-6 text-left">
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-        <input type="text" placeholder="Full Name" class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
-        <input type="email" placeholder="Email Address" class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
-      </div>
-      <input type="text" placeholder="Subject" class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
-      <textarea placeholder="Your Message" rows="5" class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white"></textarea>
-      <button type="submit" class="bg-white text-black px-6 py-3 rounded hover:bg-gray-200 transition">Send Message</button>
-    </form>
+<form id="contact-form" class="space-y-6 text-left">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+    <input name="name" type="text" placeholder="Full Name" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
+    <input name="email" type="email" placeholder="Email Address" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
+  </div>
+  <input name="subject" type="text" placeholder="Subject" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
+  <textarea name="message" rows="5" placeholder="Your Message" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white"></textarea>
+  <button type="submit" class="bg-white text-black px-6 py-3 rounded hover:bg-gray-200 transition">Send Message</button>
+</form>
+
+<script>
+  const form = document.getElementById("contact-form");
+
+  form.addEventListener("submit", async function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+
+    const response = await fetch("https://script.google.com/macros/s/AKfycbxX0J9ijuPz1mvjHRQtpNbbb1k5kiHqjhyxIqku9Ckdf15WqRam5qQIQzHfd4m4iPVH9w/exec", {
+      method: "POST",
+      body: formData
+    });
+
+    if (response.ok) {
+      alert("Message sent!");
+      form.reset();
+    } else {
+      alert("Error sending message.");
+    }
+  });
+</script>
 
   </div>
 </section>
