--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <!-- Plastering -->
         <div class="rounded-xl bg-[#1a1a1a] shadow-lg overflow-hidden hover:shadow-xl transition">
-          <img src="assets/images/plastering.jpg" class="h-48 w-full object-cover" />
+          <img src="assets/images/Plastering.jpg" class="h-48 w-full object-cover" />
           <div class="p-6">
             <h3 class="text-2xl font-semibold mb-2">Plastering</h3>
             <p class="text-gray-300">Smooth walls and ceilings, expertly done.</p>
@@ -152,7 +152,9 @@ function toggleDescription(id) {
     <div class="relative mx-auto w-full max-w-4xl h-[600px] overflow-hidden rounded shadow-lg">
  <div id="carousel" class="flex transition-transform duration-700 ease-in-out">
   <!-- Images -->
-  <img src="assets/images/work1.jpg" class="min-w-full h-full object-cover" alt="Work 1" />
+  
+  <img src="assets/images/work1.jpg" class="w-full h-full object-contain" alt="Work 1" />
+
 <img src="assets/images/work2.jpg" class="min-w-full h-full object-cover" alt="Work 2" />
 <img src="assets/images/work3.jpg" class="min-w-full h-full object-cover" alt="Work 3" />
 <img src="assets/images/work4.jpg" class="min-w-full h-full object-cover" alt="Work 4" />
@@ -194,8 +196,6 @@ function toggleDescription(id) {
 
 <script>
   let currentSlide = 0;
-  const totalSlides = 16; // 14 images + 2 videos
-
 
   function updateCarousel() {
     const carousel = document.getElementById("carousel");
@@ -203,18 +203,20 @@ function toggleDescription(id) {
   }
 
   function nextSlide() {
-    currentSlide = (currentSlide + 1) % totalSlides;
+    const slides = document.querySelectorAll('#carousel > *');
+    currentSlide = (currentSlide + 1) % slides.length;
     updateCarousel();
   }
 
   function prevSlide() {
-    currentSlide = (currentSlide - 1 + totalSlides) % totalSlides;
+    const slides = document.querySelectorAll('#carousel > *');
+    currentSlide = (currentSlide - 1 + slides.length) % slides.length;
     updateCarousel();
   }
 
-  // Initialize the first position
   updateCarousel();
 </script>
+
 
 
 
