--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MCJBuilders</title>
+
+  <link rel="icon" type="image/png" href="assets/images/Logobar.png" />
+
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
@@ -17,7 +20,9 @@
   <!-- Navigation -->
   <header class="fixed top-0 w-full bg-black bg-opacity-70 backdrop-blur-sm z-50">
   <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-5 flex-wrap">
-    <h1 class="text-2xl font-bold tracking-tight text-white">MCJBuilders</h1>
+    <img src="assets/images/Logo.png" alt="MCJBuilders Logo" class="h-16 md:h-20" />
+
+
     <!-- Mobile Menu Toggle Button -->
   <div class="block md:hidden">
   <button id="nav-toggle" class="text-white focus:outline-none">
@@ -153,17 +158,17 @@ function toggleDescription(id) {
  <div id="carousel" class="flex transition-transform duration-700 ease-in-out">
   <!-- Images -->
   
-  <img src="assets/images/work1.jpg" class="w-full h-full object-contain" alt="Work 1" />
+  <img src="assets/images/work1.jpg" class="min-w-full h-[600px] object-contain" alt="Work 1" />
 
-<img src="assets/images/work2.jpg" class="min-w-full h-full object-cover" alt="Work 2" />
-<img src="assets/images/work3.jpg" class="min-w-full h-full object-cover" alt="Work 3" />
-<img src="assets/images/work4.jpg" class="min-w-full h-full object-cover" alt="Work 4" />
-<img src="assets/images/work5.jpg" class="min-w-full h-full object-cover" alt="Work 5" />
-<img src="assets/images/work6.jpg" class="min-w-full h-full object-cover" alt="Work 6" />
-<img src="assets/images/work7.jpg" class="min-w-full h-full object-cover" alt="Work 7" />
-<img src="assets/images/work8.jpg" class="min-w-full h-full object-cover" alt="Work 8" />
-<img src="assets/images/work9.jpg" class="min-w-full h-full object-cover" alt="Work 9" />
-<img src="assets/images/work10.jpg" class="min-w-full h-full object-cover" alt="Work 10" />
+<img src="assets/images/work2.jpg" class="min-w-full h-[600px] object-contain" alt="Work 2" />
+<img src="assets/images/work3.jpg" class="min-w-full h-[600px] object-contain" alt="Work 3" />
+<img src="assets/images/work4.jpg" class="min-w-full h-[600px] object-contain" alt="Work 4" />
+<img src="assets/images/work5.jpg" class="min-w-full h-[600px] object-contain" alt="Work 5" />
+<img src="assets/images/work6.jpg" class="min-w-full h-[600px] object-contain" alt="Work 6" />
+<img src="assets/images/work7.jpg" class="min-w-full h-[600px] object-contain" alt="Work 7" />
+<img src="assets/images/work8.jpg" class="min-w-full h-[600px] object-contain" alt="Work 8" />
+<img src="assets/images/work9.jpg" class="min-w-full h-[600px] object-contain" alt="Work 9" />
+<img src="assets/images/work10.jpg" class="min-w-full h-[600px] object-contain" alt="Work 10" />
 <img src="assets/images/work11.jpg" class="min-w-full h-[600px] object-contain" alt="Work 11" />
 <img src="assets/images/work12.jpg" class="min-w-full h-[600px] object-contain" alt="Work 12" />
 <img src="assets/images/work13.jpg" class="min-w-full h-[600px] object-contain" alt="Work 13" />
@@ -171,11 +176,6 @@ function toggleDescription(id) {
 
 
   <!-- Videos -->
-  <video class="min-w-full h-full object-cover" controls muted>
-    <source src="assets/images/your-video.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
-
   <video class="min-w-full h-full object-cover" controls muted>
     <source src="assets/images/video2.mp4" type="video/mp4" />
     Your browser does not support the video tag.
@@ -268,6 +268,14 @@ function toggleDescription(id) {
       <div class="bg-white border border-gray-200 p-6 rounded-lg shadow hover:shadow-lg transition text-left">
         <h3 class="text-xl font-semibold text-black">Knowles and Son</h3>
         <p class="text-gray-700 mt-2">Projects with colleges and universities.</p>
+      </div>
+       <div class="bg-white border border-gray-200 p-6 rounded-lg shadow hover:shadow-lg transition text-left">
+        <h3 class="text-xl font-semibold text-black">Red row</h3>
+        <p class="text-gray-700 mt-2">Residential-led projects for universities and colleges.</p>
+      </div>
+      <div class="bg-white border border-gray-200 p-6 rounded-lg shadow hover:shadow-lg transition text-left">
+        <h3 class="text-xl font-semibold text-black">Bellway</h3>
+        <p class="text-gray-700 mt-2">Large-scale builds for educational institutions.</p>
       </div>
     </div>
   </div>
