--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MCJBuilders</title>
 
-  <link rel="icon" type="image/png" href="assets/images/Logobar.png" />
+  <link rel="icon" type="image/png" href="assets/images/favicorn.png" />
 
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
