--- a/index.html
+++ b/index.html
@@ -295,38 +295,25 @@ function toggleDescription(id) {
       </div>
     </div>
 
-    <!-- Right Form -->
-<form id="contact-form" class="space-y-6 text-left">
+    <form action="https://formsubmit.co/harkeerat-randhawa@hotmail.com" method="POST" class="space-y-6 text-left">
+  <!-- Replace with your email above -->
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-    <input name="name" type="text" placeholder="Full Name" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
-    <input name="email" type="email" placeholder="Email Address" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
+    <input name="name" type="text" placeholder="Full Name" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
+    <input name="email" type="email" placeholder="Email Address" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
   </div>
-  <input name="subject" type="text" placeholder="Subject" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white" />
-  <textarea name="message" rows="5" placeholder="Your Message" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700 focus:outline-none focus:ring-2 focus:ring-white"></textarea>
+
+  <input name="subject" type="text" placeholder="Subject" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
+
+  <textarea name="message" rows="5" placeholder="Your Message" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700"></textarea>
+
+  <!-- Hidden settings -->
+  <input type="hidden" name="_subject" value="New Contact from MCJ Builders">
+  <input type="hidden" name="_next" value="https://mcjbuilders.co.uk/thank-you.html">
+  <input type="hidden" name="_captcha" value="false">
+
   <button type="submit" class="bg-white text-black px-6 py-3 rounded hover:bg-gray-200 transition">Send Message</button>
 </form>
 
-<script>
-  const form = document.getElementById("contact-form");
-
-  form.addEventListener("submit", async function (e) {
-    e.preventDefault();
-
-    const formData = new FormData(form);
-
-    const response = await fetch("https://script.google.com/macros/s/AKfycbxsgg5e9LqOZ1zaG8wzqFVM2z6o1JAoukwD6HCJ89RX/exec", {
-      method: "POST",
-      body: formData
-    });
-
-    if (response.ok) {
-      alert("Message sent!");
-      form.reset();
-    } else {
-      alert("Error sending message.");
-    }
-  });
-</script>
 
   </div>
 </section>
