--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@ function toggleDescription(id) {
       </div>
     </div>
 
-    <form action="https://formsubmit.co/harkeerat-randhawa@hotmail.com" method="POST" class="space-y-6 text-left">
-  <!-- Replace with your email above -->
+    <!-- Right Form -->
+<form id="contact-form" action="https://formsubmit.co/harkeerat-randhawa@hotmail.com" method="POST" class="space-y-6 text-left">
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <input name="name" type="text" placeholder="Full Name" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
     <input name="email" type="email" placeholder="Email Address" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
@@ -306,18 +306,44 @@ function toggleDescription(id) {
 
   <textarea name="message" rows="5" placeholder="Your Message" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700"></textarea>
 
-  <!-- Hidden settings -->
   <input type="hidden" name="_subject" value="New Contact from MCJ Builders">
-  <input type="hidden" name="_next" value="https://mcjbuilders.co.uk/thank-you.html">
   <input type="hidden" name="_captcha" value="false">
+  <input type="hidden" name="_next" value="https://mcjbuilders.co.uk/">
 
   <button type="submit" class="bg-white text-black px-6 py-3 rounded hover:bg-gray-200 transition">Send Message</button>
 </form>
 
+<!-- Thank You Message -->
+<div id="thank-you-message" class="hidden text-green-400 mt-4 text-lg">
+  ✅ Thank you! We’ve received your message.
+</div>
 
-  </div>
 </section>
 
+<script>
+  const form = document.getElementById('contact-form');
+  const message = document.getElementById('thank-you-message');
+
+  form.addEventListener('submit', function (e) {
+    e.preventDefault();
+
+    const formData = new FormData(form);
+
+    fetch(form.action, {
+      method: 'POST',
+      body: formData,
+      headers: { 'Accept': 'application/json' }
+    }).then(response => {
+      if (response.ok) {
+        form.reset();
+        form.classList.add('hidden');
+        message.classList.remove('hidden');
+      } else {
+        alert("There was a problem sending your message.");
+      }
+    });
+  });
+</script>
 
 
 
