--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@ function toggleDescription(id) {
     </div>
 
     <!-- Right Form -->
-<form id="contact-form" action="https://formsubmit.co/harkeerat-randhawa@hotmail.com" method="POST" class="space-y-6 text-left">
+<form id="contact-form" action="https://formsubmit.co/ajax/3f68cb6951c5b40427200e9aebb271c1" method="POST" class="space-y-6 text-left">
+
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <input name="name" type="text" placeholder="Full Name" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
     <input name="email" type="email" placeholder="Email Address" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
@@ -306,7 +307,7 @@ function toggleDescription(id) {
 
   <textarea name="message" rows="5" placeholder="Your Message" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700"></textarea>
 
-  <input type="hidden" name="_subject" value="New Contact from MCJ Builders">
+ 
   <input type="hidden" name="_captcha" value="false">
   <input type="hidden" name="_next" value="https://mcjbuilders.co.uk/">
 
