--- a/index.html
+++ b/index.html
@@ -296,7 +296,8 @@ function toggleDescription(id) {
     </div>
 
     <!-- Right Form -->
-<form id="contact-form" action="https://formsubmit.co/ajax/3f68cb6951c5b40427200e9aebb271c1" method="POST" class="space-y-6 text-left">
+<form id="contact-form" action="https://formspree.io/f/xnnvoqdl" method="POST" class="space-y-6 text-left">
+
 
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <input name="name" type="text" placeholder="Full Name" required class="w-full p-4 rounded bg-gray-900 text-white border border-gray-700">
@@ -333,15 +334,21 @@ function toggleDescription(id) {
     fetch(form.action, {
       method: 'POST',
       body: formData,
-      headers: { 'Accept': 'application/json' }
+      headers: {
+        'Accept': 'application/json'
+      }
     }).then(response => {
       if (response.ok) {
         form.reset();
         form.classList.add('hidden');
         message.classList.remove('hidden');
       } else {
-        alert("There was a problem sending your message.");
+        response.json().then(data => {
+          alert(data.errors ? data.errors.map(e => e.message).join(", ") : "Something went wrong.");
+        });
       }
+    }).catch(error => {
+      alert("There was a problem sending your message.");
     });
   });
 </script>
